RESOLVED KNOWAGE-2870: User cannot set color and the table overflows horizontally https://production.eng.it/jira/browse/KNOWAGE-2870

--- a/knowage/src/main/webapp/themes/commons/css/SASS/components/_table.scss
+++ b/knowage/src/main/webapp/themes/commons/css/SASS/components/_table.scss
@@ -21,15 +21,43 @@
 				&.tableAction{
 					width: 50px;
 				}
-				md-input-container {
+				&.colorPickerTd{
+					width: 200px;
+				}
+				&.multiTableAction{
+					width: 100px;
+				}
+				md-input-container, md-select {
 					margin: 0;
 					width: 100%;
 				}
 				md-checkbox {
 					margin-bottom: 0;
 				}
+				color-picker{
+					width: 195px;
+					.color-picker-wrapper{
+						width: 195px;
+						z-index: unset;
+						.input-group .input-group-addon:first-child {
+							border: 1px solid $ternaryColor;
+						}
+						.color-picker-input-wrapper {
+							width: 100%;
+							.color-picker-input{
+								width: 100%;
+								border: 0;
+							    border-bottom: 1px solid $ternaryColor;
+							    padding: 5px 0 5px 30px !important;
+							    outline: none;
+							    &:focus{
+							    	border-bottom: 2px solid $baseColor;
+							    }
+							}
+						}
+					}
+				}
 			}
 		}
-		
 	}
 }
